syntax = "proto3";

package auth;

service AuthService {
  rpc GetGroup(GetGroupRequest) returns (GetGroupResponse) {}
  rpc CheckPassphrase(CheckPassphraseRequest) returns (bool) {}
}

message CheckGroupRequest {
  string groupId = 1;
}

message CheckGroupResponse {
  bool exists = 1;
  string groupName = 2;
  string groupDescription = 3;
}

message CheckPassphraseRequest {
  string passphrase = 1;
}
